# ups-mv-gans

./: .gitattributes  .gitignore  .run_jupyter_notebook.sh.swp  .~GANS_Project_Charbel_Abi_Hana.ipynb  Dockerfile  GANS_Project_Charbel_Abi_Hana.ipynb  Makefile  README.md  Untitled.ipynb  environment.yml  main.py  pyproject.toml  run_docker_gpu.sh  run_jupyter_notebook.sh  tf_gans_horse_cows_celeb.py  tf_gans_mnist.ipynb  torch_gan.ipynb
data/: GANS_Project_Charbel_Abi_Hana.ipynb
data/LaTex/: citations.bib  conference_101719.tex
dataset/: README.md
scripts/: run_docker_gpu.sh
training/callbakcs/: CycleGANMonitor.py  SaveImagesCallbackDCGAN.py  __init__.py
training/data_pre_processing/: DataLoader.py
training/layers/: Conv2DBatchNorm.py  Conv2DTBatchNorm.py  ReflectionPadding2D.py  __init__.py
training/loss_fns/: __init__.py  cyclegan_loss.py
training/models/CGAN/: CDiscriminator.py  CGAN.py  CGenerator.py  __init__.py
training/models/DCGAN/: DCGAN.py  Discriminator.py  Generator.py  __init__.py
training/models/classification/: Classifier.py
training/models/cycle_gan/: CycleGAN.py
training/utils/: metrics.py
