[tool.poetry]
name = "ups-mv-gans-project"
version = "0.1.0"
description = ""
authors = ["Charbel Abi Hana <charbel-a-h@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
tensorflow-gpu = "2.2.0"
numpy = "1.19.5"
wandb = "0.12.16"
scikit-image = "0.17.2"
jupyter = "1.0.0"
matplotlib = "3.3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
